Changes:  - Transformed to Spring Boot 2.x Project  - Replaced springfox swagger with springdoc  - Removed old configuration files  - Removed deprecated and commented out code